turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:50: error: not found: value R
    		rule(0)(0) = (1,R,0)
                                ^Turmite:51: error: not found: value R
    		rule(0)(1) = (1,R,1)
                                ^Turmite:52: error: not found: value N
    		rule(1)(0) = (0,N,0)
                                ^Turmite:53: error: not found: value N
    		rule(1)(1) = (0,N,1)
                                ^